[package]
name = "polyomino"
version = "0.1.0"
authors = ["Kim Georg Lind Pedersen <georglind@gmail.com>"]
description = "Solve polyomino puzzles using Knuth's algorithm X with the dancing links optimization"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
algox = { git = "https://github.com/georglind/algox.git" }
wasm-bindgen = "0.2.100"


